[Bug Patch] Color difference on Safari

--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -20,6 +20,7 @@
   border: 2px solid #2c3e50;
   height: fit-content;
   width: 5.5rem;
+  background-color: #fff;
 }
 
 .game_header_button:hover {
@@ -71,7 +72,12 @@
   width: 1rem;
   border: 1px solid black;
   color: black;
-  background-color: white;
+  background-color: #fff;
+}
+
+.pick_undo_button:hover {
+  box-shadow: 0px 2px 10px 5px #9bb3ce;
+  transition: 0.5s ease;
 }
 
 .message {
